# did-you-client

./: .gitignore  AUTHORS  ChangeLog  README.md  requirements.txt  setup.cfg  setup.py
did_you_client/: __init__.py  did_you_checker.py  did_you_client.py
did_you_client/command/: __init__.py
did_you_client/config/: __init__.py
