[metadata]
name = did_you_client
summary = Client for Distributed task reminder
classifier =
    Programming Language :: Python :: 3

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    did_you_client

[entry_points]
    console_scripts =
        did_you_client = did_you.client.command:run_client
        did_you_checker = did_you_client.command:run_checker
